--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,9 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "../node_modules/bootstrap/dist/css/bootstrap-grid.css";
 
+.btn-sm, .btn-group-sm > .btn {
+  padding: 0.1rem 0.5rem;
+}
 
 /*TODO remove it*/
 * {
