--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.1rem 0.5rem;
 }
+.text-center th {
+  text-align: center;
+}
 
 /*TODO remove it*/
 * {
