--- a/src/app/page/payments/payments.component.html
+++ b/src/app/page/payments/payments.component.html
@@ -1,79 +1,26 @@
-
-<h2>Order Payments (4):</h2>
-<table>
-  <thead>
-  <tr><th>ID</th><th>ORDER</th><th>DATE</th><th>METHOD</th><th>TOTAL</th><th>Refunded</th><th>GW Fee</th><th>Settled at</th></tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>P1</td><td>O1</td><td>17.08.19 12:30</td><td> paytm </td><td>100.50 INR</td> <td>45 INR</td> <td> 1.80 INR </td> <td> 18.08.19 00:30 </td>
-  </tr>
-  <tr>
-    <td>P2</td><td>O3</td><td>17.08.19 16:30</td><td> paytm </td><td>470 INR</td> <td>O</td> <td> 5 INR </td> <td> 18.08.19 00:30 </td>
-  </tr>
-  <tr>
-    <td>P3</td><td>O2</td><td>18.08.19 10:30</td><td> paytm </td><td>700 INR</td> <td>O</td> <td> - </td> <td> - </td>
-  </tr>
-  <tr>
-    <td>P4</td><td>O6</td><td>18.08.19 11:30</td><td> razorpay </td><td>75 INR</td> <td>O</td> <td> - </td> <td> - </td>
-  </tr>
-  </tbody>
-</table>
-
-<h2>Order Refunds (1):</h2>
-<table>
-  <thead>
-  <tr><th>ID</th><th>ORDER</th><th>DATE</th><th>METHOD</th><th>Refunded TOTAL</th></tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>R1</td><td>O1</td><td>18.08.19 12:30</td><td> paytm </td> <td>45 INR</td>
-  </tr>
-  </tbody>
-</table>
-<div>
-<select><option>paytm</option><option>razorpay</option></select><input type="date"/><button>CREATE SETTLEMENT</button>
-</div>
-<h2>Settlements (1):</h2>
-<table>
-  <thead>
-  <tr><th>ID</th><th>DATE</th><th>Gateway</th><th>PAYMENTS (sum/count)</th><th>REFUNDS (sum/counts)</th><th>GW FEE SUM</th><th>SETLLED AMOUNT</th><th>REFERENCES</th></tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>ST_GW_1</td><td>18.08.19 00:30</td><td> paytm </td> <td>570.50 INR (2)</td> <td>0 INR (0)</td> <td>6.80 INR</td> <td>570.50 INR</td> <td>P1, P2</td>
-  </tr>
-  </tbody>
-</table>
-<div class="row">
- <div class="column">
-   <h2>PAYTM account balance (5): </h2>
-   <table>
-     <thead>
-     <tr><th>REF</th><th>DATE</th><th>Amount</th><th>Balance</th></tr>
-     </thead>
-     <tbody>
-     <tr>
-       <td>P1</td><td>17.08.19 12:30</td><td> +100.50 INR </td> <td>100.50 INR</td>
-     </tr>
-     <tr>  <td>P2</td><td>17.08.19 16:30</td><td> +470 INR </td> <td>570.50 INR</td> </tr>
-     <tr>  <td>ST_GW_1</td><td>18.08.19 00:30</td><td> -570.50 INR </td> <td>0 INR</td> </tr>
-     <tr>  <td>P3</td><td>18.08.19 10:30</td><td> +700 INR </td> <td>700 INR</td> </tr>
-     <tr>  <td>R1</td><td>18.08.19 12:30</td><td> -45 INR </td> <td>655 INR</td> </tr>
-     </tbody>
-   </table>
- </div>
- <div class="column">
-   <h2>Razorpay account balance (1): </h2>
-   <table>
-     <thead>
-     <tr><th>REF</th><th>DATE</th><th>Amount</th><th>Balance</th></tr>
-     </thead>
-     <tbody>
-     <tr>
-       <td>P4</td><td>18.08.19 12:30</td><td> +75 INR </td> <td>75 INR</td>
-     </tr>
-     </tbody>
-   </table>
- </div>
+<div class="content">
+  <div class="container-fluid">
+    <!--Payments-->
+    <div class="row justify-content-between mb-3">
+      <div class="col-sm">
+        <h2>Order Payments ({{model.payments.all().length}})</h2>
+      </div>
+      <div class="col-sm">
+        <p class="h6">All payments for orders and custom</p>
+      </div>
+      <div class="col-sm"></div>
+    </div>
+    <div class="row justify-content-md-center mb-3">
+      <div class="col-sm">
+        <app-payments-table
+          [data]="model.payments.all()"></app-payments-table>
+      </div>
+    </div>
+    <!--Refunds-->
+    <!--TODO Refunds table-->
+    <!--Settlements-->
+    <!--TODO Settlements table-->
+    <!--balance gateway-->
+    <!--TODO balance gateway tables-->
+  </div>
 </div>
