fix description for payments page

--- a/src/app/page/payments/payments.component.html
+++ b/src/app/page/payments/payments.component.html
@@ -6,7 +6,7 @@
         <h2>Order Payments ({{model.payments.all().length}})</h2>
       </div>
       <div class="col-sm">
-        <p class="h6">All payments for orders and custom</p>
+        <p class="h6">All payments for orders with refunds and balance gateway</p>
       </div>
       <div class="col-sm"></div>
     </div>
