--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -123,7 +123,7 @@
                                 title="create RMA">RM</button>
                         <button type="button"
                                 *ngIf="item.canRefunded"
-                                (click)="item.refund()"
+                                (click)="model.toRefundOrderItem(item)"
                                 class="btn btn-sm btn-danger"
                                 title="refund">RF</button>
                       </div>
