--- a/src/app/page/payments/payments.component.html
+++ b/src/app/page/payments/payments.component.html
@@ -17,7 +17,17 @@
       </div>
     </div>
     <!--Refunds-->
-    <!--TODO Refunds table-->
+    <div class="row justify-content-between mb-3">
+      <div class="col-sm">
+        <h2>Order Refunds ({{model.refunds.count()}}):</h2>
+      </div>
+    </div>
+    <div class="row justify-content-between mb-3">
+      <div class="col-sm">
+        <app-refunds-table
+          [data]="model.refunds.all()"></app-refunds-table>
+      </div>
+    </div>
     <!--Settlements-->
     <!--TODO Settlements table-->
     <!--balance gateway-->
