--- a/src/app/ui/table/order-items-table/order-items-table.component.html
+++ b/src/app/ui/table/order-items-table/order-items-table.component.html
@@ -1,4 +1,5 @@
 <app-pure-table
   [showHeader]="!isNested"
   [showFooter]="!isNested"
-  [provider]="provider"></app-pure-table>
+  [provider]="provider"
+></app-pure-table>
