--- a/src/app/page/payments/payments.component.html
+++ b/src/app/page/payments/payments.component.html
@@ -13,7 +13,8 @@
     <div class="row justify-content-md-center mb-3">
       <div class="col-sm">
         <app-payments-table
-          [data]="model.payments.all()"></app-payments-table>
+          [data]="model.payments.all()"
+        ></app-payments-table>
       </div>
     </div>
     <!--Refunds-->
@@ -25,7 +26,8 @@
     <div class="row justify-content-between mb-3">
       <div class="col-sm">
         <app-refunds-table
-          [data]="model.refunds.all()"></app-refunds-table>
+          [data]="model.refunds.all()"
+        ></app-refunds-table>
       </div>
     </div>
     <!--Settlements-->
