--- a/src/app/ui/table/pure-table/pure-table.component.html
+++ b/src/app/ui/table/pure-table/pure-table.component.html
@@ -6,7 +6,8 @@
   </thead>
   <tbody>
     <tr *ngFor="let row of provider.rows; let i = index"
-        [class.pure-table-odd]="i % 2 === 0">
+        [class.pure-table-odd]="i % 2 === 0"
+    >
         <td *ngFor="let cell of row">{{cell}}</td>
     </tr>
     <tr *ngIf="isEmpty">
@@ -16,7 +17,8 @@
   <tfoot *ngIf="hasFooter">
     <tr>
       <td *ngFor="let footer of provider.footers"
-          [attr.colspan]="footer.colspan">{{footer.value}}</td>
+          [attr.colspan]="footer.colspan"
+      >{{footer.value}}</td>
     </tr>
   </tfoot>
 </table>
