--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row justify-content-between mb-3">
       <h2>Orders ({{model.orders.length}})</h2>
-      <p class="h6">Orders and items (you can add a new one or make a payment on the order)</p>
+      <p class="decryption">Orders and items (you can add a new one or make a payment on the order)</p>
       <app-dialog-order-create></app-dialog-order-create>
     </div>
     <div class="row justify-content-md-center mb-3">
