--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,11 @@
   text-align: center;
 }
 
+.decryption {
+  font-size: 1rem;
+  padding: 10px;
+}
+
 /*TODO remove it*/
 * {
   -webkit-box-sizing: border-box;
