--- a/src/app/ui/dialog/create-settlement/create-settlement.component.html
+++ b/src/app/ui/dialog/create-settlement/create-settlement.component.html
@@ -1,12 +1,13 @@
 <div class="input-group mb-3">
   <select
     [(ngModel)]="paymentGateway"
-    class="custom-select">
+    class="custom-select"
+  >
     <option *ngFor="let gateway of model.paymentGateways" value="{{gateway}}">{{gateway}}</option>
   </select>
   <input type="date" class="form-control" [min]="dateMin" [max]="dateMax" [(ngModel)]="settlementDate">
   <div class="input-group-append">
-    <button class="btn btn-primary" (click)="toSettlement()"  type="button">
+    <button class="btn btn-primary" (click)="toSettlement()" type="button">
       <span>create settlement</span>
     </button>
   </div>
