[BOODMO-16973] fix typo

--- a/src/app/ui/dialog/order-create/order-create.component.html
+++ b/src/app/ui/dialog/order-create/order-create.component.html
@@ -25,7 +25,7 @@
 
             <div class="form-group col-sm">
               <label for="date">Date</label>
-              <input type="datetime-localc" id="date" class="form-control"
+              <input type="datetime-local" id="date" class="form-control"
                      [min]="minDate" formControlName="date"
                      [ngClass]="{'is-invalid': form.get('date').invalid}"
               >
