--- a/src/app/ui/table/account-balances-table/account-balances-table.component.html
+++ b/src/app/ui/table/account-balances-table/account-balances-table.component.html
@@ -1,4 +1,4 @@
-<h2>{{holder | uppercase}} account balance ({{count}}): {{balance | convert}}</h2>
+<h2>{{holder | uppercase}}: ({{count}}) {{balance | convert}}</h2>
 <app-pure-table
   [provider]="provider"
 ></app-pure-table>
