add settlement to seller

--- a/src/app/page/nodal/nodal.component.html
+++ b/src/app/page/nodal/nodal.component.html
@@ -16,6 +16,7 @@
       >
         <app-account-balances-table
           [holder]="seller.name"
+          [hasSettlement]="true"
         ></app-account-balances-table>
       </div>
     </div>
