--- a/src/app/ui/table/account-balances-table/account-balances-table.component.html
+++ b/src/app/ui/table/account-balances-table/account-balances-table.component.html
@@ -3,7 +3,7 @@
         *ngIf="hasSettlement"
         (click)="model.makeSettlementToSeller(holder)"
         [disabled]="!model.catMakeSettlementToSeller(holder)"
-        class="btn btn-sm btn-danger"
+        class="btn btn-sm btn-primary"
         title="refund"
 >create settlement</button>
 <app-pure-table
