--- a/src/app/ui/menu/menu.component.html
+++ b/src/app/ui/menu/menu.component.html
@@ -1,6 +1,11 @@
 <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
   <a class="pure-menu-heading" routerLink="/">{{heading}} {{meta.releaseNumber}}</a>
   <ul class="pure-menu-list">
+    <li class="pure-menu-item">
+      <a href="#" class="pure-menu-link">
+        <app-time-and-date></app-time-and-date>
+      </a>
+    </li>
     <li class="pure-menu-item"
         [class.pure-menu-selected]="router.isActive(item.path, true)"
         *ngFor="let item of list"
