fix calc gateway settlement

--- a/src/app/ui/table/settlements-table/settlements-table.component.html
+++ b/src/app/ui/table/settlements-table/settlements-table.component.html
@@ -21,8 +21,8 @@
         <td>{{row.totalPayment | convert}} ({{row.countPayment}})</td>
         <td>{{row.totalRefund | convert}} ({{row.countRefund}})</td>
         <td>{{row.fee | convert}}</td>
-        <td>{{row.total | convert}}</td>
-        <td>{{row.references}}</td>
+        <td>{{row.amount | convert}}</td>
+        <td>{{row.references.join(', ')}}</td>
     </tr>
     <tr *ngIf="data.length === 0">
       <td colspan="8">empty</td>
