--- a/src/app/page/payments/payments.component.html
+++ b/src/app/page/payments/payments.component.html
@@ -32,10 +32,10 @@
     </div>
     <!--Settlements-->
     <div class="row justify-content-between mb-3">
-      <div class="col-sm">
+      <div class="col-sm-5">
         <h2>Settlements ({{model.settlements.count()}}):</h2>
       </div>
-      <div class="col-sm">
+      <div class="col-sm-7">
         <app-create-settlement></app-create-settlement>
       </div>
     </div>
