--- a/src/app/ui/menu/time-and-date/time-and-date.component.html
+++ b/src/app/ui/menu/time-and-date/time-and-date.component.html
@@ -1,11 +1,30 @@
+<!--<form class="form-inline">-->
+<!--  <div *ngIf="!now" (click)="now=setVirtualDate()" class="pr-3">Saved real date & time</div>-->
+<!--  &lt;!&ndash;todo +/- D H m&ndash;&gt;-->
+<!--  <div class="form-group">-->
+<!--    <input id="date" class="form-control form-control-sm" type="datetime-local"-->
+<!--           placeholder="yyyy-mm-dd HH:mm:ss" name="date" required-->
+<!--           [(ngModel)]="now"-->
+<!--           (change)="update()"-->
+<!--           (blur)="updateVirtualDate()"-->
+<!--    />-->
+<!--  </div>-->
+<!--</form>-->
 <form class="form-inline">
-  <div *ngIf="!now" (click)="now=setVirtualDate()" class="pr-3">Saved real date & time</div>
-  <!--todo +/- D H m-->
   <div class="form-group">
-    <input id="date" class="form-control form-control-sm" type="datetime-local"
-           placeholder="yyyy-mm-dd HH:mm:ss" name="date" required
-           [(ngModel)]="now"
-           (blur)="updateVirtualDate()"
-    />
+    <input class="form-control form-control-sm"
+           style="border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0;"
+           type="date"
+           [(ngModel)]="nowDate"
+           [ngModelOptions]="{standalone: true}"
+           (blur)="updateVirtualDate()"/>
+  </div>
+  <div class="form-group">
+    <input class="form-control form-control-sm"
+           style="border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;"
+           type="time"
+           [(ngModel)]="nowTime"
+           [ngModelOptions]="{standalone: true}"
+           (blur)="updateVirtualDate()"/>
   </div>
 </form>
